# comfy-name-check

./: README.md  pyproject.toml
src/name_check/: __init__.py  cli.py
