[project]
name = "name-check"
version = "0.1.0"
description = "Check name availability across Comfy Registry, PyPI, GitHub, npm, and domains"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "rich>=13.0",
]

[project.scripts]
name-check = "name_check.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/name_check"]
